--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Engineer  ',
+						'Computer Science UnderGrad  ',
 						'Software Developer ',
 						'Data Engineer   ',
 						];
